[200~weather_app_using_reactjs

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image:
+  url("/img/cloudy-blue-sky-beauytiful-scene-with-mountain.jpg");
+  background-repeat: no-repeat;
+ background-color: #f7b3cd;
+ background-position: center center;
+  background-size: cover;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  max-width: 1080px;
+  margin: 20px auto;
+}
+@media screen {
+  
 }
